# SolarSystemModel

./: .gitignore  CMakeLists.txt  README.md
config/: credentials-skel.ini
examples/curl/: CMakeLists.txt  curl.cpp
examples/dog/: CMakeLists.txt  dog.cpp
src/: Makefile.linux  Sphere.h  main.cpp
src/geometry/: geometry.cpp  geometry.hpp
src/model/: model.cpp  model.hpp
src/model/nasaClient/: nasaClient.cpp  nasaClient.hpp
src/nasaClient/: nasaClient.cpp  nasaClient.hpp
src/renderManager/: renderManager.cpp  renderManager.hpp
src/shaders/: shaders.cpp  shaders.hpp
